[project]
name = "autonomous-maintainer"
version = "0.1.0"
description = "AI-powered open-source PR reviewer and maintainer using Nova Act and Nova 2 Pro"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pygithub>=2.3.0",
    "GitPython>=3.1.43",
    "nova-act>=0.1.0",
    "boto3>=1.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
